add crop recommendation routes

--- a/notebooks/CropProduction/cropProductionPreprocessing.ipynb
+++ b/notebooks/CropProduction/cropProductionPreprocessing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 4
     }
    ],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Crop_Year</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2000</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2000</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2001</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2002</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2002</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>35199</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Autumn</td>\n      <td>Maize</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>35200</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Autumn</td>\n      <td>Rice</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>35201</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Summer</td>\n      <td>Maize</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>35202</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Summer</td>\n      <td>Rice</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>35203</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Winter</td>\n      <td>Rice</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>35204 rows × 7 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 5
     }
    ],
    "source": [
@@ -156,33 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set Features as Category\n",
-    "data['State_Name']=data['State_Name'].astype('category')\n",
-    "data['District_Name']=data['District_Name'].astype('category')\n",
-    "data['Season']=data['Season'].astype('category')\n",
-    "data['Crop']=data['Crop'].astype('category')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert Category to codes\n",
-    "data['State_Name']=data['State_Name'].cat.codes\n",
-    "data['District_Name']=data['District_Name'].cat.codes\n",
-    "data['Season']=data['Season'].cat.codes\n",
-    "data['Crop']=data['Crop'].cat.codes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,16 +166,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                        State_Name District_Name       Season    Crop  \\\n",
+       "0      Andaman and Nicobar Islands      NICOBARS  Kharif         Rice   \n",
+       "1      Andaman and Nicobar Islands      NICOBARS  Whole Year   Banana   \n",
+       "2      Andaman and Nicobar Islands      NICOBARS  Kharif         Rice   \n",
+       "3      Andaman and Nicobar Islands      NICOBARS  Kharif         Rice   \n",
+       "4      Andaman and Nicobar Islands      NICOBARS  Whole Year   Banana   \n",
+       "...                            ...           ...          ...     ...   \n",
+       "34538                  West Bengal       PURULIA  Autumn        Maize   \n",
+       "34539                  West Bengal       PURULIA  Autumn         Rice   \n",
+       "34540                  West Bengal       PURULIA  Summer        Maize   \n",
+       "34541                  West Bengal       PURULIA  Summer         Rice   \n",
+       "34542                  West Bengal       PURULIA  Winter         Rice   \n",
+       "\n",
+       "           Area  Production  \n",
+       "0         102.0      321.00  \n",
+       "1         176.0      641.00  \n",
+       "2          83.0      300.00  \n",
+       "3         189.2      510.84  \n",
+       "4         213.0     1278.00  \n",
+       "...         ...         ...  \n",
+       "34538    6317.0    13337.00  \n",
+       "34539     264.0      721.00  \n",
+       "34540     325.0     2039.00  \n",
+       "34541     306.0      801.00  \n",
+       "34542  279151.0   597899.00  \n",
+       "\n",
+       "[34543 rows x 6 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>34538</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>Autumn</td>\n      <td>Maize</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>34539</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>Autumn</td>\n      <td>Rice</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>34540</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>Summer</td>\n      <td>Maize</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>34541</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>Summer</td>\n      <td>Rice</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>34542</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>Winter</td>\n      <td>Rice</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>34543 rows × 6 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
-    "finalData=data[data['Production']>0].reset_index(drop=True)"
+    "finalData=data[data['Production']>0].reset_index(drop=True)\n",
+    "finalData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Features as Category\n",
+    "finalData['State_Name']=finalData['State_Name'].astype('category')\n",
+    "finalData['District_Name']=finalData['District_Name'].astype('category')\n",
+    "finalData['Season']=finalData['Season'].astype('category')\n",
+    "finalData['Crop']=finalData['Crop'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Category to codes\n",
+    "finalData['State_Name']=finalData['State_Name'].cat.codes\n",
+    "finalData['District_Name']=finalData['District_Name'].cat.codes\n",
+    "finalData['Season']=finalData['Season'].cat.codes\n",
+    "finalData['Crop']=finalData['Crop'].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +257,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 10
     }
    ],
    "source": [
@@ -228,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +284,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 11
     }
    ],
    "source": [
@@ -255,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,24 +302,24 @@
      "data": {
       "text/plain": [
        "       State_Name  District_Name  Season  Crop      Area  Production\n",
-       "0               0            424       1    11     102.0      321.00\n",
-       "1               0            424       4     1     176.0      641.00\n",
-       "2               0            424       1    11      83.0      300.00\n",
-       "3               0            424       1    11     189.2      510.84\n",
-       "4               0            424       4     1     213.0     1278.00\n",
+       "0               0            423       1    10     102.0      321.00\n",
+       "1               0            423       4     0     176.0      641.00\n",
+       "2               0            423       1    10      83.0      300.00\n",
+       "3               0            423       1    10     189.2      510.84\n",
+       "4               0            423       4     0     213.0     1278.00\n",
        "...           ...            ...     ...   ...       ...         ...\n",
-       "34538          32            468       0     7    6317.0    13337.00\n",
-       "34539          32            468       0    11     264.0      721.00\n",
-       "34540          32            468       3     7     325.0     2039.00\n",
-       "34541          32            468       3    11     306.0      801.00\n",
-       "34542          32            468       5    11  279151.0   597899.00\n",
+       "34538          32            467       0     6    6317.0    13337.00\n",
+       "34539          32            467       0    10     264.0      721.00\n",
+       "34540          32            467       3     6     325.0     2039.00\n",
+       "34541          32            467       3    10     306.0      801.00\n",
+       "34542          32            467       5    10  279151.0   597899.00\n",
        "\n",
        "[34543 rows x 6 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>424</td>\n      <td>4</td>\n      <td>1</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>424</td>\n      <td>4</td>\n      <td>1</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>34538</th>\n      <td>32</td>\n      <td>468</td>\n      <td>0</td>\n      <td>7</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>34539</th>\n      <td>32</td>\n      <td>468</td>\n      <td>0</td>\n      <td>11</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>34540</th>\n      <td>32</td>\n      <td>468</td>\n      <td>3</td>\n      <td>7</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>34541</th>\n      <td>32</td>\n      <td>468</td>\n      <td>3</td>\n      <td>11</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>34542</th>\n      <td>32</td>\n      <td>468</td>\n      <td>5</td>\n      <td>11</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>34543 rows × 6 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>423</td>\n      <td>1</td>\n      <td>10</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>423</td>\n      <td>4</td>\n      <td>0</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>423</td>\n      <td>1</td>\n      <td>10</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>423</td>\n      <td>1</td>\n      <td>10</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>423</td>\n      <td>4</td>\n      <td>0</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>34538</th>\n      <td>32</td>\n      <td>467</td>\n      <td>0</td>\n      <td>6</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>34539</th>\n      <td>32</td>\n      <td>467</td>\n      <td>0</td>\n      <td>10</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>34540</th>\n      <td>32</td>\n      <td>467</td>\n      <td>3</td>\n      <td>6</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>34541</th>\n      <td>32</td>\n      <td>467</td>\n      <td>3</td>\n      <td>10</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>34542</th>\n      <td>32</td>\n      <td>467</td>\n      <td>5</td>\n      <td>10</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>34543 rows × 6 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 12
     }
    ],
    "source": [
@@ -290,12 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export Preprocessed Data\n",
-    "data.to_csv(\"../../preprocessedData/CropProduction.csv\")"
+    "finalData.to_csv(\"../../preprocessedData/CropProduction.csv\")"
    ]
   }
  ]
